update otimization functions