@@ -6,9 +6,14 @@ public class Ag {
 
     private static Random random = new Random();
 
-    public Individuo executar(Factory factory, int num, int numElite, int qtdGeracoes) {
-        List<Individuo> populacaoInicial = new ArrayList<>(num);
-        for (int i = 0; i < num; i++) {
+    // IMPLEMENTAR PARADA QUANDO ATINGIR A OTIMIZACAO ANTES DO LIMITE DE GERACOES
+
+    public Individuo executar(Factory factory, int numPopulacao, int numElite, int qtdGeracoes) {
+        List<Individuo> populacaoInicial = new ArrayList<>(numPopulacao);
+        for (int i = 0; i < numPopulacao; i++) {
+            // Individuo individuo = null;
+            // while (individuo == null) 
+            //     individuo = factory.getInstance();
             populacaoInicial.add(factory.getInstance());
         }
 
@@ -17,23 +22,14 @@ public class Ag {
 
             List<Individuo> mutantes = aplicarMutacao(populacaoInicial);
 
-            // JUNCAO DE TODOS OS INDIVIDUOS
-            List<Individuo> join = new ArrayList<>(num * 3);
+            List<Individuo> join = new ArrayList<>(numPopulacao * 3);
             join.addAll(populacaoInicial);
             join.addAll(filhos);
             join.addAll(mutantes);
 
-            // ELITISMO
-            // ordenar a lista join pelo metodo getAvaliacao() de cada Individuo:
-            // -> se problema de minimizacao, ordenar de forma decrescente
-            // -> se problema de maximizacao, ordenar de forma crescente
-            // para aplicar o eletismo, retirar os "numElite" últimos da lista join ordenada
-            List<Individuo> eliteList = aplicarElitismo(numElite, join);
-
-            List<Individuo> newPopulacao = new ArrayList<>(num);
-            newPopulacao.addAll(eliteList);
-            // ROLETA
-            newPopulacao.addAll(this.aplicarRoleta(join, (num - numElite)));
+            List<Individuo> newPopulacao = new ArrayList<>(numPopulacao);
+            newPopulacao.addAll(aplicarElitismo(numElite, join));
+            newPopulacao.addAll(aplicarRoleta(join, (numPopulacao - numElite)));
 
             // imprimir o numero da geracao e o melhor individuo (genes e getAvaliacao)
             imprimirMelhorIndividuo(i, newPopulacao);
@@ -41,7 +37,8 @@ public class Ag {
             populacaoInicial = newPopulacao;
         }
 
-        // return o melhor individuo da ultima geracao (qtdGeracoes)
+        // return o melhor individuo da ultima geracao
+        // possivelmente alterar quando houver parada antes do limite de geracoes
         return imprimirMelhorIndividuo(qtdGeracoes, populacaoInicial);
     }
 
@@ -55,29 +52,23 @@ public class Ag {
                     join.set(j2, aux);
                 }
         for (int j = 0; j < numElite; j++)
-            eliteList.add(join.removeLast());
+            eliteList.add(join.remove(join.size() - 1));
         return eliteList;
     }
 
     private List<Individuo> aplicarMutacao(List<Individuo> populacaoInicial) {
         List<Individuo> mutantes = new ArrayList<>();
         for (int j = 0; j < populacaoInicial.size(); j++)
-            mutantes.add(populacaoInicial.get(j).mutar()); // gera 20 mutantes
+            mutantes.add(populacaoInicial.get(j).mutar());
         return mutantes;
     }
 
     private List<Individuo> aplicarRecombinacao(List<Individuo> populacaoInicial) {
         List<Individuo> auxiliar = new ArrayList<>();
-        auxiliar.addAll(populacaoInicial); // retira as duplas de pais daqui aleatoriamente
+        auxiliar.addAll(populacaoInicial);
 
         List<Individuo> filhos = new ArrayList<>();
         while (auxiliar.size() > 0) {
-            // RECOMBINAR
-            // escolho de 2 em 2 pais da lista populacaoInicial (aleatorio) e adiciono na
-            // lista auxiliar
-            // -> auxiliar eh a lista de historico de recombinacoes feitas
-            // cada dupla de pais escolhidas deve recombinar e gerar dois filhos
-            // colocar os 20 filhos em uma lista List<Individuo> filhos
             Individuo escolha1 = auxiliar.remove(random.nextInt(0, auxiliar.size()));
             Individuo escolha2 = auxiliar.remove(random.nextInt(0, auxiliar.size()));
             filhos.addAll(escolha1.recombinar(escolha2));
@@ -85,34 +76,22 @@ public class Ag {
         return filhos;
     }
 
-    private Individuo imprimirMelhorIndividuo(int i, List<Individuo> newPopulacao) {
+    private Individuo imprimirMelhorIndividuo(int numGeracao, List<Individuo> populacao) {
         Individuo melhor = null;
         int avaliacao = Integer.MIN_VALUE;
-        for (int j = 0; j < newPopulacao.size(); j++)
-            if (newPopulacao.get(j).getAvaliacao() > avaliacao) {
-                melhor = newPopulacao.get(j);
-                avaliacao = ((int) newPopulacao.get(j).getAvaliacao());
+        for (int j = 0; j < populacao.size(); j++)
+            if (populacao.get(j).getAvaliacao() > avaliacao) {
+                melhor = populacao.get(j);
+                avaliacao = ((int) populacao.get(j).getAvaliacao());
             }
-        System.out.println(" Geracao: " + (i + 1) + " .... " + melhor.toString());
+        System.out.println(" Geracao: " + (numGeracao + 1) + "° .... " + melhor.toString());
         return melhor;
     }
 
     private List<Individuo> aplicarRoleta(List<Individuo> join, int quantidade) {
-
-        int somatorioAvaliacoes = 0;
-        for (int i = 0; i < join.size(); i++)
-            somatorioAvaliacoes += join.get(i).getAvaliacao();
-        List<Individuo> selecionados = new ArrayList<>(quantidade);
-
-        if (join.get(0).isMaximizacao()) {
-            // maximazacao
-            selecionados = aplicarRoletaMaximizacao(join, quantidade);
-        } else {
-            // minimizacao
-            selecionados = aplicarRoletaMinimizacao(join, quantidade);
-
-        }
-        return selecionados;
+        if (join.get(0).isMaximizacao())
+            return aplicarRoletaMaximizacao(join, quantidade);
+        return aplicarRoletaMinimizacao(join, quantidade);
     }
 
     private List<Individuo> aplicarRoletaMaximizacao(List<Individuo> join, int quantidade) {
@@ -123,12 +102,14 @@ public class Ag {
                 somatorioAvaliacoes += join.get(j).getAvaliacao();
 
             int soma = 0;
+            int sorteado = random.nextInt(0, somatorioAvaliacoes);
             Individuo escolhido = null;
-            while (soma < random.nextInt(0, somatorioAvaliacoes))
-                for (int j = 0; j < join.size(); j++) {
-                    soma += join.get(j).getAvaliacao();
-                    escolhido = join.get(j);
-                }
+            for (int j = 0; j < join.size(); j++) {
+                if (soma < sorteado)
+                    break;
+                soma += join.get(j).getAvaliacao();
+                escolhido = join.get(j);
+            }
             selecionados.add(escolhido);
             join.remove(escolhido);
         }
@@ -136,20 +117,22 @@ public class Ag {
     }
 
     private List<Individuo> aplicarRoletaMinimizacao(List<Individuo> join, int quantidade) {
-        // ALTERAR ISSO
+        // considera-se o inverso multiplicativo dos getAvaliacao para realizar as somas
         List<Individuo> selecionados = new ArrayList<>(quantidade);
         for (int i = 0; i < quantidade; i++) {
             int somatorioAvaliacoes = 0;
-            for (int j = 0; i < join.size(); j++)
-                somatorioAvaliacoes += join.get(j).getAvaliacao();
+            for (int j = 0; j < join.size(); j++)
+                somatorioAvaliacoes += (1/join.get(j).getAvaliacao());
 
             int soma = 0;
+            int sorteado = random.nextInt(0, somatorioAvaliacoes);
             Individuo escolhido = null;
-            while (soma < random.nextInt(0, somatorioAvaliacoes))
-                for (int j = 0; j < join.size(); j++) {
-                    soma += join.get(j).getAvaliacao();
-                    escolhido = join.get(j);
-                }
+            for (int j = 0; j < join.size(); j++) {
+                if (soma < sorteado)
+                    break;
+                soma += (1/join.get(j).getAvaliacao());
+                escolhido = join.get(j);
+            }
             selecionados.add(escolhido);
             join.remove(escolhido);
         }
